# body_mass_index_with_c

./: CMakeLists.txt  Read.md  bmi_calculator.c
